Attempt fix for pdf-viewing on mobile

--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -1,10 +1,7 @@
-p {
-  color: white;
-}
-
 #resume-container {
   z-index: 1;
   position: absolute;
+  background-color: white;
   top: 5vh;
   left: 5vw;
   bottom: 5vh;
@@ -25,10 +22,11 @@ p {
 }
 
 object, iframe {
+  background-color: white;
   width: 100%;
   height: 100%;
 }
 
-iframe {
-  border: none;
-}
+/*iframe {*/
+  /*border: none;*/
+/*}*/
